--- a/app/index.html
+++ b/app/index.html
@@ -5,8 +5,8 @@
   <meta charset="utf-8">
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <title>D'alma</title>
-  <!-- <link href="https://fonts.googleapis.com/css?family=Lato:400,400i,700" rel="stylesheet"> -->
+  <title>Matrix Maturity Model Questionnaire - D'alma</title>
+  <link href="https://fonts.googleapis.com/css?family=Lato:400,400i,700" rel="stylesheet">
   <link rel="stylesheet" href="styles/main.css">
 </head>
 
@@ -44,7 +44,7 @@
     </div>
   </div>
 
-  <div class="single-charts mb-4 container">
+  <div class="single-charts container">
     <h1>Dimensión Personas</h1>
     <div class="answer-group" data-group="1">
       <div class="row">
@@ -826,6 +826,16 @@
       </div>
     </div>
   </div>
+
+  <footer>
+    <div class="footer-logo">
+      <img src="images/logo_dalma.svg">
+      <a href="http://www.dalmabp.com">www.dalmabp.com</a>
+    </div>
+  </footer>
+
+
+
   <!-- <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script> -->
   <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script> -->
   <!-- <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script> -->
