--- a/app/index.html
+++ b/app/index.html
@@ -26,7 +26,7 @@
 
   <div class="container main-chart">
 
-    <div class="main-chart-wrapper html2pdf__page-break">
+    <div class="main-chart-wrapper html2pdf__page-break" data-aos="custom-an" data-aos-offset="400">
       <svg id="chart" width="546px" height="546px" viewBox="0 0 546 546" version="1.1" xmlns="http://www.w3.org/2000/svg">
           <g id="m3qextended" stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
               <g id="logo" transform="translate(233.000000, 252.000000)" fill-rule="nonzero">
