added copied versions

--- a/app/company.html
+++ b/app/company.html
@@ -919,7 +919,7 @@
   <!-- <script src="scripts/utils.js"></script> -->
   <script src="scripts/aos.js"></script>
   <script src="scripts/html2pdf.bundle.min.js"></script>
-  <script src="scripts/smtp.js"></script>
+  <!-- <script src="scripts/smtp.js"></script> -->
   <script src="scripts/main.company.js?ver=3.2"></script>
   <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
   <script>
