--- a/app/lite-lp.html
+++ b/app/lite-lp.html
@@ -523,7 +523,7 @@
   <script src="scripts/aos.js"></script>
   <script src="scripts/html2pdf.bundle.min.js"></script>
   <!-- <script src="scripts/smtp.js"></script> -->
-  <script src="scripts/main.reduced.js?1234567890"></script>
+  <script src="scripts/main.reduced-lp.js?1234567890"></script>
   <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
   <script>
   (function(b, o, i, l, e, r) {
