--- a/app/index.html
+++ b/app/index.html
@@ -919,7 +919,7 @@
   <!-- <script src="scripts/utils.js"></script> -->
   <script src="scripts/aos.js"></script>
   <script src="scripts/html2pdf.bundle.min.js"></script>
-  <script src="scripts/smtp.js"></script>
+  <!-- <script src="scripts/smtp.js"></script> -->
   <script src="scripts/main.js?ver=2.0"></script>
   <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
   <script>
